<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/timer_start_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvContent"
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/egg_timer_start_content"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvNegative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/color_EBEBEB"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mcvPositive"
                    app:layout_constraintTop_toBottomOf="@+id/tvContent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNegative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="11dp"
                        android:paddingHorizontal="16dp"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:gravity="center"/>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvPositive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/mcvNegative"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvContent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPositive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_4466DE"
                        android:paddingVertical="11dp"
                        android:paddingHorizontal="16dp"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:gravity="center"
                        tools:text="@string/continue1"/>

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>