<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.life.myTimer.ui.setting.SettingActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_283964">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopBar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/color_4466DE"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_setting_arrow_left"
                android:layout_marginStart="16dp"
                android:onClick="@{() -> activity.finish()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/setting"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFastStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:text="@string/setting_fast_start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/clTopBar"
            app:layout_constraintStart_toStartOf="parent"/>

        <Switch
            android:id="@+id/swFastStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:track="@drawable/switch_track_selector"
            android:thumb="@drawable/switch_thumb"
            app:layout_constraintTop_toBottomOf="@+id/clTopBar"
            app:layout_constraintBottom_toBottomOf="@+id/tvFastStart"
            app:layout_constraintEnd_toEndOf="parent"
            tools:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppVersionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:text="@string/setting_app_version"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFastStart"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintTop_toBottomOf="@+id/swFastStart"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="v1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>